# MessagingApp

./: CMakeLists.txt  ClientUser.cpp  ClientUser.h  Mesajlaşma Projesi v01.docx  Message.cpp  Message.h  README.md  client.cpp  server.cpp  start_all.bat
MessagingApp/: MessagingApp.sln  MessagingApp.vcxproj  MessagingApp.vcxproj.filters  start_all.bat
Server/: Server.vcxproj  Server.vcxproj.filters
doc/html/: _client_user_8cpp.html  _client_user_8cpp__incl.dot  _client_user_8h.html  _client_user_8h.js  _client_user_8h__dep__incl.dot  _client_user_8h__incl.dot  _client_user_8h_source.html  _message_8cpp.html  _message_8cpp__incl.dot  _message_8h.html  _message_8h.js  _message_8h__dep__incl.dot  _message_8h__incl.dot  _message_8h_source.html  annotated.html  annotated_dup.js  class_client_user-members.html  class_client_user.html  class_client_user.js  class_message-members.html  class_message.html  class_message.js  classes.html  client_8cpp.html  client_8cpp.js  client_8cpp__incl.dot  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  globals_vars.html  md__r_e_a_d_m_e.html  pages.html  server_8cpp.html  server_8cpp.js  server_8cpp__incl.dot
doc/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  variables_0.js  variables_1.js
